# comfy_nodes

./: .env.template  .gitignore  LICENSE.html  README.md  __init__.py  ai4artsed_ollama.py  ai4artsed_ollama_imageanalysis.py  ai4artsed_openrouter.py  ai4artsed_openrouter_imageanalysis.py  ai4artsed_openrouter_key.py  ai4artsed_random_artform_generator.py  ai4artsed_random_instruction_generator.py  ai4artsed_random_language_selector.py  ai4artsed_show_text.py  ai4artsed_text_distributor.py  ai4artsed_text_remix.py  ai4artsed_text_transform_artform.py  ai4artsed_text_transform_creative.py  ai4artsed_transform_artform.py  ai4artsed_transform_creative.py  manifest.json  ollama_prompt.py  ollama_prompt_openrouter  ollama_prompt_openrouter.py  openrouter.key.template  openrouter_key.py  pyproject.toml  showtext.py  simple_text_display.py
.github/workflows/: publish.yml
THIRD_PARTY_LICENSES/: comfy_ollama_APACHE.txt  show_text.txt
